--- a/style.css
+++ b/style.css
@@ -21,7 +21,8 @@ body {
     background-color: rgba(0, 0, 0, 0.5);
     z-index: 9999;
   }
-  
+
+
 #generateInvoice{
     background-color: white;
     border: none;
@@ -98,7 +99,7 @@ body {
     padding: 10rem;
     height: 100%;
     padding: 0px;
-    overflow: hidden;
+    overflow-x: hidden;
 
 }
 
@@ -109,7 +110,7 @@ body {
     justify-content: center;
     grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
     padding-bottom: 5rem;
-    overflow: hidden;
+    overflow-x: hidden;
 }
 
 .add-product{
@@ -134,21 +135,19 @@ body {
 
 .searchInput::placeholder{
     color: white;
-    font-size: 1rem;
+    font-size: .5rem;
     
 }
 .searchInput{
-    width:200px; 
-    height: 40px; 
-    margin: 10px;
-    margin-left: 0;
-    border: .2rem solid white; 
+    width: 6rem; 
+    height: 1.8rem; 
+    border: .2rem solid rgb(159, 152, 152); 
     background-color: transparent; 
-    text-align: center; 
-    font-size: 15px; 
     border-radius: 5px;
     color: white;
-    font-size: 1.5rem;
+    font-size: .5rem;
+    margin: .5rem;
+    margin-right: 5rem;
 }
 .searchInput:hover{
     transition: .5s all ease;
